--- a/src/style.css
+++ b/src/style.css
@@ -4,26 +4,25 @@ body{
             font-weight: 100;
             font-style: normal;
 }
-#studentform{
-    width: 80%;
+.color{
+    width: 60%;
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 4%;
-    margin-left:10%;
+    margin-left:20%;
     border-radius: 10px;
     padding-top: 3%;
     padding-bottom: 3%;
+    padding-left: 4%;
 }
 #add , #remove {
    background-color: #164451;
    color: white;
    height: 8vh;
-   width: 10%;
+   width: 16%;
    font-weight: 600;
    font-size: 18px;
    border-radius: 10px;
+   margin: 10px;
 }
 #submit{
     background-color: #164451;
@@ -33,13 +32,14 @@ body{
     height: 5vh;
     width: 30%;
     margin-top: 3%;
+    margin-left: 24%;
 }
 .main{
     margin-left: 5%;
 }
 #add{
     margin-right: 16%;
-    width: 12%;
+    width: 16%;
 }
 #fname , #lname ,#age,#qualification,#cell{
     height: 3vh;
@@ -47,5 +47,8 @@ body{
 }
 #tablebox{
     margin-top: 10%;
+}
+td,th,tr{
+    border: 2px solid black;
 }
 
